# hypergravity

./: .gitignore  README.md  my_packages.md  pyproject.toml  readthedocs.yml
doc/: preview.sh  requirements.txt
doc/source/: conf.py  index.rst
doc/source/csst/: table_model.ipynb
doc/source/scratch/: citation.rst
doc/source/slam/: slam.rst
doc/source/songcn/: pv2002.rst  songcn.rst
hypergravity/: cli.py  config.py  enc.py  naoc.py  naoc_sci_stats.py
hypergravity/dl/: linear_regression.py  linear_regression_activation.py  linear_regression_from_zero.py  linear_regression_softmax.py
