[project]
name = "hypergravity"
description = "Bo Zhang's scratch board."
version = "0.0.1"
authors = [
    { name = "Bo Zhang", email = "bozhang@nao.cas.cn" }
]
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
citation = "hypergravity.cli:cli"

#[project.optional-dependencies]
#dev = [
#    "tox",
#    "pre-commit",
#    "bump2version"
#]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
